1) add translation 2) phrasal controls 3) phraseNum button 4) styling

--- a/src/components/PlayerPhrasalControls.css
+++ b/src/components/PlayerPhrasalControls.css
@@ -2,6 +2,11 @@
 	display: flex;
 }
 
+.playerPhrasalControlsContainer ion-icon {
+	background-color: white;
+	border-radius: 10px;
+}
+
 .playerPhrasalControlsContainer ion-button {
 	height: unset;
 	margin-bottom: 1px;
