--- a/src/components/PhrasesBlock.css
+++ b/src/components/PhrasesBlock.css
@@ -4,11 +4,36 @@
 	/* border: 1px solid rgba(255, 255, 255, 1); */
 	border-radius: 10px;
 }
-.active {
-	position: relative;
-	z-index: -1;
+.phraseBlock .phraseNum {
+	text-align: right;
+	font-size: 9px;
+	color: grey;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
 }
-.active:before {
+
+.phraseBlock.active .textTr,
+.phraseBlock.active .phraseNum {
+	color: lightgray;
+}
+
+.phraseBlock ion-button {
+	height: unset;
+	font-size: unset;
+	color: unset;
+	margin: unset;
+	z-index: 0;
+}
+
+.phraseBlock .textTr {
+	color: grey;
+	font-size: 14px;
+}
+.phraseBlock.active {
+	position: relative;
+}
+.phraseBlock.active:before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -18,7 +43,4 @@
 	z-index: -1;
 	background: #3880ff;
 	filter: blur(10px);
-}
-
-.phraseText {
 }
