add side menu (drawer)

--- a/src/components/PlayerPhrasalControls.css
+++ b/src/components/PlayerPhrasalControls.css
@@ -11,3 +11,9 @@
 	height: unset;
 	margin-bottom: 1px;
 }
+
+.playerPhrasalControlsContainer ion-menu-button {
+	/* --background: #3880ff; */
+	color: #3880ff;
+	height: 24px;
+}
