trace active phrase by id, not index

--- a/src/components/PhrasesBlock.css
+++ b/src/components/PhrasesBlock.css
@@ -13,6 +13,10 @@
 	justify-content: flex-end;
 }
 
+/* .phraseWrapper:nth-child(1) {
+	display: none;
+} */
+
 .phraseBlock.active .textTr,
 .phraseBlock.active .phraseNum {
 	color: lightgray;
